--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        
+        <activity android:name=".mainMenu"
+        		  android:label="mainMenu">
+        </activity>
     </application>
 </manifest>
